--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.4",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-datepicker": "^4.24.0",
